<resources>
    <string name="app_name">TerviApp</string>
    <string name="btn_Sesion">Iniciar sesion</string>
    <string name="btn_registrar">Crear cuenta</string>
    <string name="textUsuario">Usuarios</string>
    <string name="textContraseña">Contraseña</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- String para pantalla principal -->
    <string name="objetivos">Objetivos del día</string>
    <string name="como_est_dia">¿Que has hecho hoy?</string>
    <string name="btn_diario">Diario</string>
    <string name="proximo_en">Proximo en: </string>
    <string name="prom_respuesta">Respuesta</string>
    <string name="perfil">Ver Perfil</string>
    <string name="btn_hacer">Ir</string>
    <string name="objetivo1">5 flexiones</string>
    <string name="objetivo2">4 estiramientos</string>
    <string name="objetivo3">Caminar 5 minutos</string>
    <string name="avance">¿Que tanto has progresado?</string>
    <string name="escanear">Escanear</string>
    <string name="completar">Completar</string>


    <!-- Botones generales -->
    <string name="regresar">Regresar</string>


    <!-- Strings del perfil -->
    <string name="usser">Usuario: Jose98</string>
    <string name="id_usser">00038</string>
    <string name="nombre">Nombre: Jose</string>
    <string name="dias_t">Dias en tratamiento: 5</string>
    <string name="apellidos">Apellidos: Lopez Gonzales</string>
    <string name="genero">Genero: Masculino</string>
    <string name="peso">Peso: 89 kg</string>
    <string name="altura">Altura: 1.7 metros</string>
    <string name="perfil_text">Datos de la cuenta</string>
    <string name="perfil_text2">Datos personales</string>
    <string name="bienvenida">Bienvenido Jose98</string>


    <!-- String resumen -->
    <string name="resumen_text">Resumen de actividad</string>
    <string name="resumen_text2">Ejercicios completados</string>
    <string name="objetivos_c">Ejercicios completados:1</string>
    <string name="terapias_c">Terapias completadas: 3</string>
    <string name="racha">Dias en Racha: 3</string>

    <!-- Strings Retos diarios -->
    <string name="title_retos">Retos Diarios</string>
    <string name="title_historial_actividades">Historial de Actividades</string>
    <string name="title_historial_ejercicios">Historial de Ejercicios</string>

    <!-- String diario -->
    <string name="diario_text">Diario de actividades</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="registrar">Registrar</string>
    <string name="fecha">Fecha: 22/04/2026</string>
    <string name="registro">El dia de hoy realice 2 ejercicios extras, me senti en condicion para hacerlo</string>


    <!-- String Iniicio de sesion -->

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Usuario</string>
    <string name="title_iniciar_sesion">Iniciar sesion</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">La contraseña debe tener >5 caracteres</string>
    <string name="login_failed">"Inicio de sesion fallido"</string>


    <!-- Strings para preguntas -->
    <string-array name="preguntas_diarias">
        <item>¿Cómo te sientes hoy?</item>
        <item>¿Qué es lo que más te emociona de esta semana?</item>
        <item>¿Ya bebiste suficiente agua hoy?</item>
        <item>Define tu dia con un emoji</item>
        <item>¿Como estuvo el desayuno?</item>
        <item>¿Si fueras un ave cual serias?</item>
    </string-array>


    <!-- Array String para estados de animo -->
    <string-array name="estado_animo">
        <item>Feliz</item>
        <item>Feliz</item>
        <item>Feliz</item>
        <item>Feliz</item>
        <item>Feliz</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>